--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -79,8 +79,10 @@
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 20px;
+
   border-radius: 24px;
   text-align: center;
+
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 56px;
@@ -89,9 +91,25 @@
 
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 32px) / 3);
+
+    padding-top: 108px;
+    padding-left: 26px;
+    padding-right: 26px;
+
+    border-radius: 16px;
   }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    border-radius: 16px;
+  }
+
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 64px) / 3);
+
+    padding-top: 166px;
+    padding-left: 62px;
+    padding-right: 62px;
+    padding-bottom: 60px;
   }
 }
 .products__item--green {
