--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -88,6 +88,9 @@
       margin-bottom: 56px;
     }
   }
+  @media screen and (min-width: 480px) {
+    width: 280px;
+  }
 
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 32px) / 3);
@@ -138,7 +141,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    width: 302px;
+    width: 303px;
     height: 316px;
   }
   border-radius: 50%;
