--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -18,6 +18,8 @@
   --brown-cl: #d6936d;
   --grey-cl: #7a7a7a;
   --time-grey-cl: #907e82;
+  --green-cl: #aec6a5;
+  --yellow-cl: #efd478;
 
-  --anim: 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --anim: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
