--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,40 +1,343 @@
-.overlay {
-  opacity: 0;
-  visibility: hidden;
+// .overlay {
+//     opacity: 0;
+//     visibility: hidden;
 
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 20;
-  transition: opacity var(--anim);
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.5);
+//   z-index: 20;
+//   transition: opacity var(--anim);
+// }
+.container {
+  max-width: 280px;
+  @media screen and (min-width: 768px) {
+    max-width: 568px;
+  }
+
+  border-radius: 10px;
+  border: 2px solid var(--accent-txt-cl);
+  background-color: var(--light-cl);
 }
 
 .modal {
-  opacity: 0;
-  visibility: hidden;
+  //   opacity: 0;
+  //   visibility: hidden;
 
-  width: 100%;
-  max-width: 568px;
+  margin-right: auto;
+  margin-left: auto;
 
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 30;
+  //     position: fixed;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%) scale(1);
+  //   z-index: 10000;
 
   text-align: center;
-  padding: 30px;
   color: var(--dark-txt-cl);
-  border-radius: 3px;
-  border-color: var(--accent-txt-cl);
-  background-color: var(--light-cl);
-  transition: opacity var(--anim);
+  transition: transform var(--anim);
+
+  .modal__close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+
+    border: none;
+    background-color: var(--light-cl);
+  }
+
+  .heading {
+    display: block;
+    font-family: var(--secondary-font);
+    font-size: 16px;
+    line-height: calc(24 / 16);
+
+    @media screen and (min-width: 768px) {
+      font-size: 20px;
+      line-height: calc(28 / 20);
+    }
+  }
+  // Buy now modal
+  .container__buy-now {
+    padding: 32px;
+
+    @media screen and (min-width: 768px) {
+      padding: 32px 54px;
+    }
+  }
+  .buy-now__goods-set {
+    margin-bottom: 24px;
+    margin-top: 84px;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 40px;
+      margin-top: 103px;
+    }
+  }
+  .goods-set__link {
+    display: block;
+  }
+  .goods-set__item:not(:first-child) {
+    @media screen and (max-width: 767px) {
+      margin-top: 84px;
+    }
+  }
+  .goods-set__item {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 131px;
+    height: 136px;
+  }
+  .goods-set__label {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+  .goods-set__checkbox {
+    position: absolute;
+    appearance: none;
+  }
+  .goods-set__checkbox:checked + .goods-set__titlebox--green {
+    background: linear-gradient(
+        0deg,
+        rgba(156, 190, 143, 0.7),
+        rgba(156, 190, 143, 0.7)
+      ),
+      #d9d9d9;
+    border: none;
+  }
+  .goods-set__checkbox:checked + .goods-set__titlebox--yellow {
+    background: linear-gradient(
+        0deg,
+        rgba(248, 210, 78, 0.7),
+        rgba(248, 210, 78, 0.7)
+      ),
+      #d9d9d9;
+    box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+    border: none;
+  }
+  .goods-set__checkbox:checked + .goods-set__titlebox--brown {
+    background: linear-gradient(
+        0deg,
+        rgba(213, 117, 63, 0.7),
+        rgba(213, 117, 63, 0.7)
+      ),
+      #d9d9d9;
+    box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+    border: none;
+  }
+  .thumb {
+    width: 100%;
+    height: 130px;
+    position: absolute;
+    z-index: 30;
+    top: -50%;
+
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  .ellipse {
+    width: 100%;
+    height: 131px;
+    position: absolute;
+    z-index: 20;
+    top: -45%;
+    border-radius: 50%;
+
+    &--green {
+      background: linear-gradient(
+          0deg,
+          rgba(156, 190, 143, 0.7),
+          rgba(156, 190, 143, 0.7)
+        ),
+        #d9d9d9;
+      box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+    }
+
+    &--yellow {
+      background: linear-gradient(
+          0deg,
+          rgba(248, 210, 78, 0.7),
+          rgba(248, 210, 78, 0.7)
+        ),
+        #d9d9d9;
+      box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+    }
+    &--brown {
+      background: linear-gradient(
+          0deg,
+          rgba(213, 117, 63, 0.7),
+          rgba(213, 117, 63, 0.7)
+        ),
+        #d9d9d9;
+      box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+    }
+  }
+  .goods-set__titlebox {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding-top: 96px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(20 / 16);
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    border-radius: 15.7808px;
+
+    &--green {
+      border: 2px solid #96af8c;
+      filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+    }
+    &--yellow {
+      border: 2px solid #efd478;
+      box-shadow: 0px 5.26027px 19.726px rgba(212, 20, 67, 0.1);
+    }
+    &--brown {
+      border: 2px solid #d6936d;
+      filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+    }
+  }
+  .ingradients__label,
+  .buy-now__label {
+    position: relative;
+    display: block;
+    margin-bottom: 12px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 16px;
+    }
+
+    &--mb {
+      margin-bottom: 24px;
+    }
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 32px;
+    }
+  }
+
+  .buy-now__input,
+  .ingradients__input:invalid {
+    background-color: rgb(255, 181, 180);
+  }
+  .buy-now__input,
+  .buy-now__input:focus-within,
+  .buy-now__input:placeholder-shown,
+  .buy-now__comment,
+  .ingradients__input,
+  .ingradients__input:focus-within,
+  .ingradients__input:placeholder-shown,
+  .ingradients__comment {
+    padding: 8px 12px 7px;
+    width: 100%;
+
+    background: rgba(248, 210, 78, 0.1);
+    border: 1px solid #84a178;
+    border-radius: 10px;
+    outline: none;
+    @media screen and (min-width: 768px) {
+      width: 368px;
+    }
+  }
+
+  .buy-now__comment,
+  .ingradients__comment {
+    height: 64px;
+    resize: none;
+  }
+  .buy-now__btn,
+  .ingradients__btn {
+    cursor: pointer;
+    padding: 12px 34px;
+
+    font-weight: 600;
+    font-size: 12px;
+    line-height: calc(15 / 12);
+
+    background: #ebc642;
+    border: none;
+    border-radius: 10px;
+  }
+
+  //   Modal ingradients
+  .container__ingradients {
+    padding: 28px 20px 32px;
+  }
+  .ingradients__heading {
+    width: 142px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .composition {
+    width: 100%;
+    height: 72px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .composition__item {
+    position: relative;
+    width: 53px;
+  }
+  .composition__value {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 43px;
+    height: 43px;
+    top: 1;
+    left: 5px;
+
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 2.8;
+
+    background: #9cbe8f;
+    border: 2px solid #9cbe8f;
+    border-radius: 50%;
+    box-shadow: 0px 6px 20px rgba(10, 136, 23, 0.25);
+  }
+  .composition__itembox {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 53px;
+    height: 72px;
+
+    font-size: 10px;
+    line-height: 1.2;
+
+    border: 2px solid #9cbe8f;
+    border-radius: 40px;
+  }
+  .composition__title {
+    position: absolute;
+    bottom: 8px;
+  }
+  .ingradients__item {
+    display: flex;
+    justify-content: space-between;
+  }
+  .ingradients__name,
+  .ingradients__value {
+    display: inline-block;
+  }
 }
 
-.modal.active,
+.modal.active {
+  transform: scale(1);
+  visibility: visible;
+}
 .overlay.active {
   opacity: 1;
   visibility: visible;
