--- a/src/sass/layouts/_hero-header.scss
+++ b/src/sass/layouts/_hero-header.scss
@@ -1,4 +1,3 @@
-// npm start
 .header {
   background-color: var(--main-bg-cl);
 }
@@ -42,6 +41,7 @@
 
   background-color: transparent;
   border: none;
+  cursor: pointer;
   @media screen and (min-width: 768px) {
     margin-right: 32px;
   }
@@ -51,7 +51,7 @@
 }
 
 .btn-header {
-  display: block;
+  display: flex;
   padding: 12px 34px;
   font-weight: 600;
   font-size: 14px;
@@ -61,14 +61,6 @@
   border-radius: 10px;
   border-color: transparent;
   transition: background-color var(--anim), color var(--anim);
-
-  @media screen and (min-width: 1200px) {
-    margin-left: auto;
-  }
-  @media screen and (max-width: 767px) {
-    display: none;
-  }
-
   &:hover {
     background-color: #0a8817;
   }
@@ -77,10 +69,23 @@
     background-color: #0a8817;
   }
 }
-
 .btn-frame {
-  margin: 0 auto;
+  display: block;
+  margin-left: 5px;
+
+  fill: transparent;
+  stroke: var(--dark-txt-cl);
 }
+
+.btn-adaptive {
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
+  }
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
 // Hero
 
 .section-hero {
@@ -97,7 +102,6 @@
     padding-top: 45px;
     padding-bottom: 65px;
   }
-  outline: 2px solid tomato;
 }
 
 .container-hero {
@@ -132,7 +136,6 @@
 .hero-list {
   display: flex;
   gap: 8;
-  z-index: 100;
 
   @media screen and (min-width: 768px) {
     margin-bottom: 28px;
@@ -141,6 +144,9 @@
     gap: 34;
     margin-bottom: 42px;
   }
+}
+.hero-item {
+  z-index: 10;
 }
 .hero-link-btn {
   padding: 5px 9px;
@@ -162,6 +168,7 @@
   }
 
   @media screen and (min-width: 1200px) {
+    z-index: 10;
     padding: 12px 34px;
     font-size: 14px;
     line-height: calc(18 / 14);
@@ -355,5 +362,86 @@
 
   100% {
     transform: scaley(1);
+  }
+}
+
+// Модалка header
+.mobile-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--main-bg-cl);
+  z-index: 1000;
+  padding: 100px 22px 63px;
+
+  @media screen and (min-width: 768px) {
+    padding: 140px 32px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: none;
+  }
+  transform: translateX(-100%);
+  transition: transform var(--anim);
+}
+.is-open {
+  transform: translateX(0);
+}
+
+.logo-menu {
+  position: absolute;
+  display: inline-block;
+  top: 12px;
+  left: 31px;
+  @media screen and (min-width: 768px) {
+    top: 20px;
+    left: 32px;
+  }
+}
+.mobile-menu-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: none;
+}
+
+.modal-link {
+  display: block;
+  text-align: center;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: calc(39 / 32);
+  color: var(--main-txt-cl);
+  transition: color var(--anim);
+
+  &:hover,
+  &:focus {
+    color: var(--dark-txt-cl);
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: calc(39 / 32);
+  }
+}
+
+.modal-item:not(:last-child) {
+  margin-bottom: 32px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 40px;
+  }
+}
+
+.btn-modal {
+  margin: 0 auto;
+  margin-top: auto;
+  @media screen and (min-width: 768px) {
+    display: none;
   }
 }
