--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -13,6 +13,7 @@
   --main-bg-cl: #84a178;
   --light-cl: #ffffff;
   --light-grey-cl: #e1e1e1;
+  --bg-green-cl: #0a8817;
 
   /* Others */
   --brown-cl: #d6936d;
