--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about section">
+<section class="about">
   <p class="about__label">tradition and love</p>
   <h2 class="about__title" id="how-made">how it’s made?</h2>
   <div class="about__wrap">
@@ -49,16 +49,10 @@
       </p>
       <button class="about__btn" type="button">
         Read more
-        <svg width="12" height="12">
+        <svg class="about__btn-icon" width="12" height="12">
           <use href="./images/sprite.svg#icon-btn-frame"></use>
         </svg>
       </button>
     </div>
   </div>
-  <button class="about__btn" type="button">
-    Read more
-    <svg class="about__btn-icon" width="12" height="12">
-      <use href="./images/sprite.svg#icon-btn-frame"></use>
-    </svg>
-  </button>
 </section>
