--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section advantages">
+<section class="advantages">
   <ul class="advantages__list">
     <li class="advantages__item">
       <svg class="advantages__icon" width="50" height="50">
