--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -178,10 +178,10 @@
   }
 }
 .contacts__btn--locations:hover {
-  background: #0a8817;
+  background: var(--bg-green-cl);
 }
 .contacts__btn--locations:focus {
-  background: #0a8817;
+  background: var(--bg-green-cl);
   color: var(--main-txt-cl);
 }
 
@@ -190,13 +190,14 @@
   border: 2px solid var(--accent-txt-cl);
 }
 .contacts__btn--franchise:hover {
-  border: 2px solid #0a8817;
+  border: 2px solid var(--bg-green-cl);
 }
 .contacts__btn--franchise:focus {
-  border: 2px solid #0a8817;
+  border: 2px solid var(--bg-green-cl);
   color: var(--main-txt-cl);
 }
 
 .contacts__icon {
-  fill: currentColor;
+  fill: transparent;
+  stroke: var(--dark-txt-cl);
 }
