--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -11,24 +11,24 @@
 //   z-index: 20;
 //   transition: opacity var(--anim);
 // }
-.container__buy-now {
+.container {
   max-width: 280px;
-  padding: 32px;
+  @media screen and (min-width: 768px) {
+    max-width: 568px;
+  }
+
   border-radius: 10px;
   border: 2px solid var(--accent-txt-cl);
   background-color: var(--light-cl);
-
-  @media screen and (min-width: 768px) {
-    max-width: 568px;
-    padding: 32px 54px;
-  }
 }
+
 .modal {
   //   opacity: 0;
   //   visibility: hidden;
 
   margin-right: auto;
   margin-left: auto;
+  overflow-y: scroll;
 
   //     position: fixed;
   //   top: 50%;
@@ -51,6 +51,8 @@
 
   .heading {
     display: block;
+    margin-left: auto;
+    margin-right: auto;
     font-family: var(--secondary-font);
     font-size: 16px;
     line-height: calc(24 / 16);
@@ -133,6 +135,7 @@
     border: none;
   }
   .thumb {
+    display: block;
     width: 100%;
     height: 130px;
     position: absolute;
@@ -143,7 +146,8 @@
     overflow: hidden;
   }
   .ellipse {
-    width: 100%;
+    display: block;
+    width: 131px;
     height: 131px;
     position: absolute;
     z-index: 20;
@@ -180,6 +184,7 @@
     }
   }
   .goods-set__titlebox {
+    display: block;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -206,7 +211,8 @@
     }
   }
   .ingradients__label,
-  .buy-now__label {
+  .buy-now__label,
+  .franchise__label {
     position: relative;
     display: block;
     margin-bottom: 12px;
@@ -224,8 +230,9 @@
     }
   }
 
-  .buy-now__input,
-  .ingradients__input:invalid {
+  .buy-now__input:invalid,
+  .ingradients__input:invalid,
+  .franchise__input:invalid {
     background-color: rgb(255, 181, 180);
   }
   .buy-now__input,
@@ -235,9 +242,14 @@
   .ingradients__input,
   .ingradients__input:focus-within,
   .ingradients__input:placeholder-shown,
-  .ingradients__comment {
+  .ingradients__comment,
+  .franchise__input,
+  .franchise__input:focus-within,
+  .franchise__input:placeholder-shown,
+  .franchise__comment {
     padding: 8px 12px 7px;
     width: 100%;
+    height: 32px;
 
     background: rgba(248, 210, 78, 0.1);
     border: 1px solid #84a178;
@@ -245,16 +257,17 @@
     outline: none;
     @media screen and (min-width: 768px) {
       width: 368px;
+      height: 42px;
     }
   }
 
   .buy-now__comment,
-  .ingradients__comment {
+  .ingradients__comment,
+  .franchise__comment {
     height: 64px;
     resize: none;
   }
-  .buy-now__btn,
-  .ingradients__btn {
+  .btn {
     cursor: pointer;
     padding: 12px 34px;
 
@@ -265,22 +278,161 @@
     background: #ebc642;
     border: none;
     border-radius: 10px;
+    transition: background-color var(--anim), color var(--anim);
+    &:hover {
+      background-color: #0a8817;
+    }
+    &:focus {
+      color: var(--main-txt-cl);
+      background-color: #0a8817;
+    }
+  }
+  // Modal read-more
+  .read-more__container {
+    padding: 28px;
+    @media screen and (min-width: 768px) {
+      padding: 32px 60px;
+    }
+  }
+  .read-more__heading {
+    margin-bottom: 20px;
+    @media screen and (min-width: 768px) {
+      padding: 32px 60px;
+    }
+  }
+  .read-more__iframe {
+    margin-bottom: 20px;
+    width: 224px;
+    height: 199px;
+    @media screen and (min-width: 768px) {
+      padding: 32px 60px;
+      width: 448px;
+      height: 205px;
+    }
+  }
+  // Modal map
+  .map__container {
+    position: relative;
+    width: 280px;
+    height: 363px;
+
+    padding: 28px;
+
+    @media screen and (min-width: 768px) {
+      padding: 32px 60px;
+      width: 568px;
+      height: 468px;
+    }
   }
 
+  .map__heading {
+    font-family: var(--secondary-font);
+    font-size: 16px;
+    line-height: calc(24 / 16);
+    text-align: center;
+    color: var(--dark-txt-cl);
+    margin-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 20px;
+      line-height: calc(28 / 20);
+      margin-bottom: 32px;
+    }
+  }
+
+  .modalclose-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    background-color: transparent;
+    border: none;
+    @media screen and (min-width: 768px) {
+      top: 20px;
+      right: 20px;
+    }
+  }
+
+  .map-link {
+    display: inline-block;
+    margin-top: 24px;
+    padding: 12px 34px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: calc(15 / 12);
+    color: var(--dark-txt-cl);
+    background-color: var(--accent-txt-cl);
+    border-radius: 10px;
+
+    @media screen and (min-width: 768px) {
+      margin-top: 32px;
+      font-size: 14px;
+      line-height: calc(17 / 14);
+    }
+
+    transition: background-color var(--anim), color var(--anim);
+    &:hover {
+      background-color: #0a8817;
+    }
+    &:focus {
+      color: var(--main-txt-cl);
+      background-color: #0a8817;
+    }
+  }
   //   Modal ingradients
+
   .container__ingradients {
     padding: 28px 20px 32px;
+    @media screen and (min-width: 768px) {
+      padding: 32px 40px;
+    }
   }
   .ingradients__heading {
     width: 142px;
+    margin-bottom: 22px;
+
+    @media screen and (min-width: 768px) {
+      width: 100%;
+    }
+  }
+  .ingradients__imgbox {
+    position: relative;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 31px;
+    width: 131px;
+    height: 131px;
+  }
+  .ingradients__thumb {
+    position: absolute;
+
+    width: 131px;
+    height: 131px;
+    z-index: 30;
+
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  .ingradients__ellipse {
+    display: block;
+    width: 131px;
+    height: 131px;
+    position: absolute;
+    z-index: 20;
+    top: 5%;
+    border-radius: 50%;
   }
   .composition {
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     height: 72px;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 39px;
+    @media screen and (min-width: 768px) {
+      width: 320px;
+      margin-bottom: 48px;
+    }
   }
   .composition__item {
     position: relative;
@@ -332,6 +484,44 @@
   .ingradients__name,
   .ingradients__value {
     display: inline-block;
+  }
+  .ingradients__title {
+    margin-bottom: 24px;
+
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.4;
+  }
+  .ingradients__list {
+    margin-bottom: 48px;
+    font-size: 14px;
+    line-height: 1.76;
+  }
+  .ingradients__item:not(:last-child) {
+    margin-bottom: 11px;
+  }
+  // franchise modal
+  .franchise__container {
+    padding: 28px 26px;
+  }
+  .franchise__heading {
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 24/16;
+    @media screen and (min-width: 768px) {
+      width: 322px;
+      margin-bottom: 24px;
+    }
+  }
+  .franchise__description {
+    margin-bottom: 32px;
+    font-size: 14px;
+    line-height: 1.4;
+    text-align: left;
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+    }
   }
 }
 
