--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -123,6 +123,7 @@
       #d9d9d9;
     box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
     border: none;
+    transition: background var(--anim);
   }
   .goods-set__checkbox:checked + .goods-set__titlebox--brown {
     background: linear-gradient(
@@ -133,6 +134,7 @@
       #d9d9d9;
     box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
     border: none;
+    transition: background var(--anim);
   }
   .thumb {
     display: block;
@@ -183,6 +185,7 @@
       box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
     }
   }
+
   .goods-set__titlebox {
     display: block;
     position: absolute;
@@ -208,6 +211,11 @@
     &--brown {
       border: 2px solid #d6936d;
       filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+    }
+    transition: background var(--anim), box-shadow var(--anim);
+    &:hover,
+    &:focus {
+      box-shadow: 9px 7px 16px -1px rgba(186, 184, 167, 0.75);
     }
   }
   .ingradients__label,
@@ -287,97 +295,14 @@
       background-color: #0a8817;
     }
   }
-  // Modal read-more
-  .read-more__container {
-    padding: 28px;
+  .buy-now__btn {
+    width: 114px;
+    height: 42px;
     @media screen and (min-width: 768px) {
-      padding: 32px 60px;
-    }
-  }
-  .read-more__heading {
-    margin-bottom: 20px;
-    @media screen and (min-width: 768px) {
-      padding: 32px 60px;
-    }
-  }
-  .read-more__iframe {
-    margin-bottom: 20px;
-    width: 224px;
-    height: 199px;
-    @media screen and (min-width: 768px) {
-      padding: 32px 60px;
-      width: 448px;
-      height: 205px;
-    }
-  }
-  // Modal map
-  .map__container {
-    position: relative;
-    width: 280px;
-    height: 363px;
-
-    padding: 28px;
-
-    @media screen and (min-width: 768px) {
-      padding: 32px 60px;
-      width: 568px;
-      height: 468px;
+      width: 121px;
     }
   }
 
-  .map__heading {
-    font-family: var(--secondary-font);
-    font-size: 16px;
-    line-height: calc(24 / 16);
-    text-align: center;
-    color: var(--dark-txt-cl);
-    margin-bottom: 20px;
-
-    @media screen and (min-width: 768px) {
-      font-size: 20px;
-      line-height: calc(28 / 20);
-      margin-bottom: 32px;
-    }
-  }
-
-  .modalclose-btn {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    background-color: transparent;
-    border: none;
-    @media screen and (min-width: 768px) {
-      top: 20px;
-      right: 20px;
-    }
-  }
-
-  .map-link {
-    display: inline-block;
-    margin-top: 24px;
-    padding: 12px 34px;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: calc(15 / 12);
-    color: var(--dark-txt-cl);
-    background-color: var(--accent-txt-cl);
-    border-radius: 10px;
-
-    @media screen and (min-width: 768px) {
-      margin-top: 32px;
-      font-size: 14px;
-      line-height: calc(17 / 14);
-    }
-
-    transition: background-color var(--anim), color var(--anim);
-    &:hover {
-      background-color: #0a8817;
-    }
-    &:focus {
-      color: var(--main-txt-cl);
-      background-color: #0a8817;
-    }
-  }
   //   Modal ingradients
 
   .container__ingradients {
@@ -500,6 +425,104 @@
   .ingradients__item:not(:last-child) {
     margin-bottom: 11px;
   }
+  .ingradients__btn {
+    width: 132px;
+    height: 42px;
+    @media screen and (min-width: 768px) {
+      width: 121px;
+    }
+  }
+  // Modal read-more
+  .read-more__container {
+    padding: 28px;
+    @media screen and (min-width: 768px) {
+      padding: 32px 60px;
+    }
+  }
+  .read-more__heading {
+    margin-bottom: 20px;
+    @media screen and (min-width: 768px) {
+      padding: 32px 60px;
+    }
+  }
+
+  .read-more__iframe {
+    margin-bottom: 20px;
+    width: 224px;
+    height: 199px;
+    @media screen and (min-width: 768px) {
+      width: 448px;
+      height: 205px;
+    }
+  }
+  // Modal map
+  .map__container {
+    position: relative;
+    width: 280px;
+    height: 363px;
+
+    padding: 28px;
+
+    @media screen and (min-width: 768px) {
+      padding: 32px 60px;
+      width: 568px;
+      height: 468px;
+    }
+  }
+
+  .map__heading {
+    font-family: var(--secondary-font);
+    font-size: 16px;
+    line-height: calc(24 / 16);
+    text-align: center;
+    color: var(--dark-txt-cl);
+    margin-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 20px;
+      line-height: calc(28 / 20);
+      margin-bottom: 32px;
+    }
+  }
+
+  .modalclose-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    background-color: transparent;
+    border: none;
+    @media screen and (min-width: 768px) {
+      top: 20px;
+      right: 20px;
+    }
+  }
+
+  .map-link {
+    display: inline-block;
+    margin-top: 24px;
+    padding: 12px 34px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: calc(15 / 12);
+    color: var(--dark-txt-cl);
+    background-color: var(--accent-txt-cl);
+    border-radius: 10px;
+
+    @media screen and (min-width: 768px) {
+      margin-top: 32px;
+      font-size: 14px;
+      line-height: calc(17 / 14);
+    }
+
+    transition: background-color var(--anim), color var(--anim);
+    &:hover {
+      background-color: #0a8817;
+    }
+    &:focus {
+      color: var(--main-txt-cl);
+      background-color: #0a8817;
+    }
+  }
   // franchise modal
   .franchise__container {
     padding: 28px 26px;
@@ -523,8 +546,14 @@
       font-size: 16px;
     }
   }
+  .franchise__btn {
+    width: 114px;
+    height: 42px;
+    @media screen and (min-width: 768px) {
+      width: 121px;
+    }
+  }
 }
-
 .modal.active {
   transform: scale(1);
   visibility: visible;
