Заміна .webp на .jpg в /modal

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -114,10 +114,10 @@
         >Chololate icecream</strong
         >
         <div class="thumb">
-           <img   srcset="./images/modals/choco.webp 1x,
-                  ./images/modals/choco@2x.webp 2x"
+           <img   srcset="./images/modals/choco.jpg 1x,
+                  ./images/modals/choco@2x.jpg 2x"
                 sizes="132px"
-                src="./images/modals/choco.webp"
+                src="./images/modals/choco.jpg"
                 alt="chocolate icecream"
                 width="132"
                 height="138">
