--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -123,6 +123,7 @@
       #d9d9d9;
     box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
     border: none;
+    transition: background var(--anim);
   }
   .goods-set__checkbox:checked + .goods-set__titlebox--brown {
     background: linear-gradient(
@@ -133,6 +134,7 @@
       #d9d9d9;
     box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
     border: none;
+    transition: background var(--anim);
   }
   .thumb {
     display: block;
@@ -196,6 +198,7 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     border-radius: 15.7808px;
+    user-select: none;
 
     &--green {
       border: 2px solid #96af8c;
@@ -209,6 +212,7 @@
       border: 2px solid #d6936d;
       filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
     }
+    transition: background var(--anim);
   }
   .ingradients__label,
   .buy-now__label,
@@ -305,7 +309,6 @@
     width: 224px;
     height: 199px;
     @media screen and (min-width: 768px) {
-      padding: 32px 60px;
       width: 448px;
       height: 205px;
     }
