--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,16 +1,16 @@
-// .overlay {
-//     opacity: 0;
-//     visibility: hidden;
+.overlay {
+  opacity: 0;
+  visibility: hidden;
 
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background-color: rgba(0, 0, 0, 0.5);
-//   z-index: 20;
-//   transition: opacity var(--anim);
-// }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: opacity var(--anim);
+}
 .container {
   max-width: 280px;
   @media screen and (min-width: 768px) {
@@ -23,18 +23,18 @@
 }
 
 .modal {
-  //   opacity: 0;
-  //   visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
 
   margin-right: auto;
   margin-left: auto;
   overflow-y: scroll;
 
-  //     position: fixed;
-  //   top: 50%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%) scale(1);
-  //   z-index: 10000;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  z-index: 10000;
 
   text-align: center;
   color: var(--dark-txt-cl);
