--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -358,6 +358,7 @@
           required
           name="franchise-email "
           placeholder="Email"
+          title="Useremail must include '@' symbol."
         />
       </label>
       <label class="franchise__label franchise__label--mb">
