--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,46 +4,52 @@
     <h2 class="title">products</h2>
 
     <ul class="products" id="products">
-      <li class="products__item products__item--green">
+      <li class="products__item">
         <span class="circl circl--green"></span>
-        <h3 class="products__title">ice cream</h3>
-        <p class="products__desc">
-          Soft ice cream with a delicate taste. Made with milk, cream, sugar and
-          natural stabilizer
-        </p>
-        <button class="open" type="button">
-          <svg class="feature__icon" width="40" height="10">
-            <use href="./images/sprite.svg#icon-arrow"></use>
-          </svg>
-        </button>
+        <div class="products__wrap products__wrap--green">
+          <h3 class="products__title">ice cream</h3>
+          <p class="products__desc">
+            Soft ice cream with a delicate taste. Made with milk, cream, sugar
+            and natural stabilizer
+          </p>
+          <button class="open" type="button">
+            <svg class="feature__icon" width="40" height="40">
+              <use href="./images/sprite.svg#icon-arrow"></use>
+            </svg>
+          </button>
+        </div>
       </li>
 
-      <li class="products__item products__item--yellow">
+      <li class="products__item">
         <span class="circl circl--yellow"></span>
-        <h3 class="products__title">ice coffee</h3>
-        <p class="products__desc">
-          Fragrant invigorating drink created from 100% natural ingredients
-          without the use of preservatives and flavor enhancers
-        </p>
-        <button class="open" type="button">
-          <svg class="feature__icon" width="40" height="10">
-            <use href="./images/sprite.svg#icon-arrow"></use>
-          </svg>
-        </button>
+        <div class="products__wrap products__wrap--yellow">
+          <h3 class="products__title">ice coffee</h3>
+          <p class="products__desc">
+            Fragrant invigorating drink created from 100% natural ingredients
+            without the use of preservatives and flavor enhancers
+          </p>
+          <button class="open" type="button">
+            <svg class="feature__icon" width="40" height="40">
+              <use href="./images/sprite.svg#icon-arrow"></use>
+            </svg>
+          </button>
+        </div>
       </li>
 
-      <li class="products__item products__item--brown">
+      <li class="products__item">
         <span class="circl circl--brown"></span>
-        <h3 class="products__title">milkshakes</h3>
-        <p class="products__desc">
-          Sweet drinks based on milk and ice cream, supplemented with syrups,
-          fruits, berries and other sweets of your choice
-        </p>
-        <button class="open" type="button">
-          <svg class="feature__icon" width="40" height="10">
-            <use href="./images/sprite.svg#icon-arrow"></use>
-          </svg>
-        </button>
+        <div class="products__wrap products__wrap--brown">
+          <h3 class="products__title">milkshakes</h3>
+          <p class="products__desc">
+            Sweet drinks based on milk and ice cream, supplemented with syrups,
+            fruits, berries and other sweets of your choice
+          </p>
+          <button class="open" type="button">
+            <svg class="feature__icon" width="40" height="40">
+              <use href="./images/sprite.svg#icon-arrow"></use>
+            </svg>
+          </button>
+        </div>
       </li>
     </ul>
   </div>
