--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -39,7 +39,7 @@
         <use href="./images/sprite.svg#icon-burger"></use>
       </svg>
     </button>
-    <button class="btn-header btn-adaptive" type="button">
+    <button class="btn-header btn-adaptive js-open-modal" data-modal="1" type="button">
       Buy now
       <svg class="btn-frame" width="14" height="14">
         <use href="./images/sprite.svg#icon-btn-frame"></use>
