--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -128,7 +128,7 @@
   </div>
 </div>
 <!-- ingradients modal -->
-<div class="modal" data-modal="2">
+<!-- <div class="modal" data-modal="2">
   <div class="container container__ingradients">
     <button data-modal-close type="button" class="modal__close-btn">
       <svg class="modal__close-icon" width="20" height="20">
@@ -241,9 +241,9 @@
       <button class="ingradients__btn btn" type="submit">Submit</button>
     </form>
   </div>
-</div>
+</div> -->
 <!-- read more modal -->
-<div class="modal" data-modal="3">
+<!-- <div class="modal" data-modal="3">
   <div class="container read-more__container">
     <button data-modal-close type="button" class="modal__close-btn">
       <svg class="modal__close-icon" width="20" height="20">
@@ -266,9 +266,9 @@
       adipiscing elit, sed do eiusmod tempor incididunt ut labore et
     </p>
   </div>
-</div>
+</div> -->
 <!-- map -->
-<div class="modal-container modal" data-modal="4">
+<!-- <div class="modal-container modal" data-modal="4">
   <div class="container map__container">
     <button data-modal-close type="button" class="modalclose-btn">
       <svg class="modalclose-icon" width="20" height="20">
@@ -309,9 +309,9 @@
       >Open map</a
     >
   </div>
-</div>
+</div> -->
 <!-- Franchise modal -->
-<div class="modal" data-modal="5">
+<!-- <div class="modal" data-modal="5">
   <div class="container franchise__container">
     <button data-modal-close type="button" class="modal__close-btn">
       <svg class="modal__close-icon" width="20" height="20">
@@ -372,6 +372,6 @@
       <button class="franchise__btn btn" type="submit">Submit</button>
     </form>
   </div>
-</div>
+</div> -->
 
 <div class="overlay js-overlay-modal"></div>
