--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -279,13 +279,13 @@
 
     <picture>
       <!-- Desktop- Tabletscreen -->
-      <source
+      <!-- <source
         media="(min-width: 768px)"
         srcset="./images/modals/map.jpg 1x, ./images/modals/map@2x.jpg 2x"
         type="image/jpg"
-      />
+      /> -->
       <!-- Mobile screen -->
-      <source
+      <!-- <source
         media="(max-width: 767px)"
         srcset="
           ./images/modals/map-mobile.jpg    1x,
