--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,13 +8,13 @@
       <ul class="socials list">
         <li class="socials__item">
           <a
-            class="socials__linklink"
+            class="socials__link link"
             href="https://github.com"
             aria-label="Github"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <svg class="socials__icon">
+            <svg class="socials__icon" width="20" height="20">
               <use href="./images/sprite.svg#icon-github"></use>
             </svg>
           </a>
@@ -27,7 +27,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <svg class="socials__icon">
+            <svg class="socials__icon" width="20" height="20">
               <use href="./images/sprite.svg#icon-telegram"></use>
             </svg>
           </a>
@@ -40,7 +40,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <svg class="socials__icon">
+            <svg class="socials__icon" width="20" height="20">
               <use href="./images/sprite.svg#icon-facebook"></use>
             </svg>
           </a>
