--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -48,7 +48,7 @@
         <p class="about__text about__text--hidden">
           This is enough to choose ice cream and coffee for any mood!
         </p>
-        <button class="about__btn" type="button">
+        <button class="about__btn js-open-modal" data-modal="3" type="button">
           Read more
           <svg class="about__btn-icon" width="12" height="12">
             <use href="./images/sprite.svg#icon-btn-frame"></use>
