--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,7 +12,7 @@
             Soft ice cream with a delicate taste. Made with milk, cream, sugar
             and natural stabilizer
           </p>
-          <button class="open" type="button">
+          <button class="open js-open-modal" data-modal="2" type="button">
             <svg class="feature__icon" width="40" height="40">
               <use href="./images/sprite.svg#icon-arrow"></use>
             </svg>
@@ -28,7 +28,7 @@
             Fragrant invigorating drink created from 100% natural ingredients
             without the use of preservatives and flavor enhancers
           </p>
-          <button class="open" type="button">
+          <button class="open js-open-modal" data-modal="2" type="button">
             <svg class="feature__icon" width="40" height="40">
               <use href="./images/sprite.svg#icon-arrow"></use>
             </svg>
@@ -44,7 +44,7 @@
             Sweet drinks based on milk and ice cream, supplemented with syrups,
             fruits, berries and other sweets of your choice
           </p>
-          <button class="open" type="button">
+          <button class="open js-open-modal" data-modal="2" type="button">
             <svg class="feature__icon" width="40" height="40">
               <use href="./images/sprite.svg#icon-arrow"></use>
             </svg>
