--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -118,13 +118,21 @@
       </li>
     </ul>
     <div class="contacts__buttons">
-      <button class="contacts__btn contacts__btn--locations" type="button">
+      <button
+        class="contacts__btn contacts__btn--locations js-open-modal"
+        data-modal="4"
+        type="button"
+      >
         Our Locations
         <svg class="contacts__icon" width="12" height="12">
           <use href="./images/sprite.svg#icon-btn-frame"></use>
         </svg>
       </button>
-      <button class="contacts__btn contacts__btn--franchise" type="button">
+      <button
+        class="contacts__btn contacts__btn--franchise js-open-modal"
+        data-modal="5"
+        type="button"
+      >
         Franchise
         <svg class="contacts__icon" width="12" height="12">
           <use href="./images/sprite.svg#icon-btn-frame"></use>
