--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -39,7 +39,11 @@
         <use href="./images/sprite.svg#icon-burger"></use>
       </svg>
     </button>
-    <button class="btn-header btn-adaptive js-open-modal" data-modal="1" type="button">
+    <button
+      class="btn-header btn-adaptive js-open-modal"
+      data-modal="1"
+      type="button"
+    >
       Buy now
       <svg class="btn-frame" width="14" height="14">
         <use href="./images/sprite.svg#icon-btn-frame"></use>
@@ -85,7 +89,11 @@
       </li>
     </ul>
 
-    <button class="btn-header btn-modal" type="button">
+    <button
+      class="btn-header btn-modal js-open-modal"
+      data-modal="1"
+      type="button"
+    >
       Buy now
       <span class="span-btn-header">
         <svg class="btn-frame" width="15" height="15">
