--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -8,10 +8,9 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 20;
+  z-index: 9999;
   transition: opacity var(--anim);
 }
-
 
 .modal {
   opacity: 0;
@@ -19,7 +18,6 @@
 
   margin-right: auto;
   margin-left: auto;
-  overflow-y: scroll;
 
   position: fixed;
   top: 50%;
@@ -29,19 +27,22 @@
 
   text-align: center;
   color: var(--dark-txt-cl);
-  transition: transform var(--anim);
+  transition: opacity var(--anim);
+  @media screen and (max-width: 767px) {
+    overflow-y: scroll;
+  }
 
   .container {
-      max-width: 280px;
-  
-      @media screen and (min-width: 768px) {
-        max-width: 568px;
-      }
-  
-      border-radius: 10px;
-      border: 2px solid var(--accent-txt-cl);
-      background-color: var(--light-cl);
+    width: 280px;
+
+    @media screen and (min-width: 768px) {
+      width: 568px;
     }
+
+    border-radius: 10px;
+    border: 2px solid var(--accent-txt-cl);
+    background-color: var(--light-cl);
+  }
 
   .modal__close-btn {
     position: absolute;
@@ -74,6 +75,7 @@
     }
   }
   .buy-now__goods-set {
+    width: 100%;
     margin-bottom: 24px;
     margin-top: 84px;
     @media screen and (min-width: 768px) {
