--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,4 +9,5 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
+    background-attachment: fixed;
 }
