--- a/src/sass/layouts/_hero-header.scss
+++ b/src/sass/layouts/_hero-header.scss
@@ -29,6 +29,8 @@
   font-weight: 700;
   font-size: 16px;
   line-height: calc(20 / 16);
+  padding-top: 40px;
+  padding-bottom: 14px;
   color: var(--main-txt-cl);
 
   &:hover,
