--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -18,7 +18,7 @@
           <a class="header-link" href="#">Home</a>
         </li>
         <li class="header-item">
-          <a class="header-link" href="#how-made">How it’s made?</a>
+          <a class="header-link" href="./index.html#how-made">How it’s made?</a>
         </li>
         <li class="header-item">
           <a class="header-link" href="#products">Our products</a>
@@ -39,7 +39,11 @@
         <use href="./images/sprite.svg#icon-burger"></use>
       </svg>
     </button>
-    <button class="btn-header btn-adaptive js-open-modal" data-modal="1" type="button">
+    <button
+      class="btn-header btn-adaptive js-open-modal"
+      data-modal="1"
+      type="button"
+    >
       Buy now
       <svg class="btn-frame" width="14" height="14">
         <use href="./images/sprite.svg#icon-btn-frame"></use>
@@ -58,21 +62,21 @@
         <use href="./images/sprite.svg#icon-menu-close"></use>
       </svg>
     </button>
-
-    <img
-      class="logo-menu"
-      srcset="
-        ./images/header/mobile-logo-41.png 41w,
-        ./images/header/tablet-logo-48.png 48w
-      "
-      sizes="(min-width: 768px) 48px, 41px"
-      src="./images/header/mobile-logo-41.png"
-      alt="Logo"
-    />
+    <a href="./index.html" class="logo">
+      <img
+        class="logo-menu"
+        srcset="
+          ./images/header/mobile-logo-41.png 41w,
+          ./images/header/tablet-logo-48.png 48w
+        "
+        sizes="(min-width: 768px) 48px, 41px"
+        src="./images/header/mobile-logo-41.png"
+        alt="Logo"
+    /></a>
 
     <ul class="modal-list">
       <li class="modal-item">
-        <a class="modal-link" href="#">Home</a>
+        <a class="modal-link" href="./index.html">Home</a>
       </li>
       <li class="modal-item">
         <a class="modal-link" href="#how-made">How it’s made?</a>
@@ -116,13 +120,13 @@
         <img
           class="plate-img"
           srcset="
-            ./images/hero/_plate-152.png 152w,
-            ./images/hero/_plate-225.png 225w,
-            ./images/hero/_plate-304.png 304w,
-            ./images/hero/_plate-450.png 450w
+            ./images/hero/nplate-152.png 152w,
+            ./images/hero/nplate-225.png 225w,
+            ./images/hero/nplate-304.png 304w,
+            ./images/hero/nplate-450.png 450w
           "
           sizes="(min-width: 1200px) 225px, (min-width: 768px) 152px"
-          src="./images/hero/_plate-152.png"
+          src="./images/hero/nplate-152.png"
           alt="table with ice cream"
         />
         <img
