--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,13 +1,13 @@
 body {
-    font-family: var(--main-font);
-    color: var(--main-txt-cl);
-    font-size: 12px;
-    line-height: calc(21 / 12);
-    letter-spacing: 0.04em;
+  font-family: var(--main-font);
+  color: var(--main-txt-cl);
+  font-size: 12px;
+  line-height: calc(21 / 12);
+  letter-spacing: 0.04em;
 
-    background-image: url('../images/base-bg-img.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: repeat;
-    background-attachment: fixed;
+  background-image: url('../images/base-bg-img.jpg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: repeat;
+  background-attachment: fixed;
 }
