--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -19,7 +19,7 @@
   margin-right: auto;
   margin-left: auto;
 
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
