--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,7 +6,7 @@ body {
   letter-spacing: 0.04em;
 
   background-image: url('../images/base-bg-img.jpg');
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: repeat;
   background-attachment: fixed;
