--- a/src/sass/layouts/_hero-header.scss
+++ b/src/sass/layouts/_hero-header.scss
@@ -1,17 +1,15 @@
 .header {
   background-color: var(--main-bg-cl);
+  @media screen and (min-width: 1200px) {
+    padding-top: 20px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 8px;
+  }
 }
 .header-container {
   display: flex;
   align-items: center;
-  padding: 12px;
-
-  @media screen and (min-width: 1200px) {
-    padding: 20px;
-  }
-  @media screen and (min-width: 1200px) {
-    padding: 8px;
-  }
 }
 
 .header-list {
@@ -26,6 +24,7 @@
   }
 }
 .header-link {
+  padding: 10px 0;
   font-weight: 700;
   font-size: 16px;
   line-height: calc(20 / 16);
@@ -149,6 +148,7 @@
   z-index: 10;
 }
 .hero-link-btn {
+  display: inline-block;
   padding: 5px 9px;
   font-weight: 600;
   font-size: 8px;
@@ -175,6 +175,7 @@
   }
 }
 .hero-link {
+  display: inline-block;
   padding: 5px 9px;
   font-weight: 600;
   font-size: 8px;
@@ -290,12 +291,18 @@
   position: absolute;
   top: 0;
   right: 0;
+  margin-right: 32px;
   @media screen and (max-width: 767px) {
     display: none;
   }
+  @media screen and (min-width: 1200px) {
+    margin-right: 15px;
+  }
 }
+
 .counter-item:first-child {
   margin-bottom: 20px;
+
   @media screen and (min-width: 1200px) {
     margin-bottom: 16px;
   }
