--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
 <!-- buy now modal -->
-<div class="modal container__buy-now" data-modal="1">
+<div class="modal modal__buy-now container__buy-now" data-modal="1">
   <div class="container container__buy-now">
     <svg
       class="modal__close-icon modal__close-btn js-modal-close"
@@ -8,7 +8,7 @@
     >
       <use href="./images/sprite.svg#icon-close-cross"></use>
     </svg>
-    <form class="buy-now__modal" autocomplete="off">
+    <form class="buy-now__form" autocomplete="off">
       <strong class="buy-now__heading heading">Buy now</strong>
       <ul class="buy-now__goods-set">
         <li class="goods-set__item">
@@ -130,7 +130,7 @@
   </div>
 </div>
 <!-- ingradients modal -->
-<div class="modal" data-modal="2">
+<div class="modal modal__ingradients" data-modal="2">
   <div class="container container__ingradients">
     <svg
       class="modal__close-icon modal__close-btn js-modal-close"
@@ -139,7 +139,7 @@
     >
       <use href="./images/sprite.svg#icon-close-cross"></use>
     </svg>
-    <form class="ingradients__modal">
+    <form class="ingradients__form">
       <strong class="ingradients__heading heading">Chololate icecream</strong>
       <div class="ingradients__imgbox">
         <div class="ingradients__thumb">
@@ -247,7 +247,7 @@
   </div>
 </div>
 <!-- read more modal -->
-<div class="modal" data-modal="3">
+<div class="modal modal__read-more" data-modal="3">
   <div class="container read-more__container">
     <svg
       class="modal__close-icon modal__close-btn js-modal-close"
@@ -274,7 +274,7 @@
   </div>
 </div>
 <!-- map -->
-<div class="modal-container modal" data-modal="4">
+<div class="modal-container modal modal__map" data-modal="4">
   <div class="container map__container">
     <svg
       class="modal__close-icon modal__close-btn js-modal-close"
@@ -319,7 +319,7 @@
   </div>
 </div>
 <!-- Franchise modal -->
-<div class="modal" data-modal="5">
+<div class="modal modal__franchise" data-modal="5">
   <div class="container franchise__container">
     <svg
       class="modal__close-icon modal__close-btn js-modal-close"
@@ -328,7 +328,7 @@
     >
       <use href="./images/sprite.svg#icon-close-cross"></use>
     </svg>
-    <form class="franchise__modal">
+    <form class="franchise__form">
       <strong class="franchise__heading heading"
         >Thank you for your interest in owning an Ice Cream shop</strong
       >
