--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -144,24 +144,19 @@
 .circl {
   position: absolute;
   top: -120px;
-  left: 12px;
+  left: 0;
 
-  width: 200px;
+  width: 100%;
   height: 210px;
   border-radius: 50%;
 
   background-position: center;
   background-repeat: no-repeat;
-
-  @media screen and (max-width: 767px) {
-    left: 40px;
-  }
+  background-size: contain;
 
   @media screen and (min-width: 1200px) {
-    width: 302px;
     height: 316px;
     top: -183px;
-    left: 34px;
   }
 }
 
