--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -51,7 +51,6 @@
     </button>
   </div>
   <!-- Модалка header-->
-
   <div class="mobile-container js-menu-container" id="mobile-menu">
     <button
       class="mobile-menu-btn js-close-menu"
@@ -113,10 +112,10 @@
 
       <ul class="hero-list">
         <li class="hero-item">
-          <a class="hero-link-btn" href="">Products</a>
+          <a class="hero-link-btn" href="#products">Products</a>
         </li>
         <li class="hero-item">
-          <a class="hero-link" href="">How it’s made?</a>
+          <a class="hero-link" href="#how-made">How it’s made?</a>
         </li>
       </ul>
 
