Добавил белый блюр вокруг морож.

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -200,6 +200,20 @@
           loading="lazy"
         />
       </picture>
+      <img
+        class="blur"
+        srcset="
+          ./images/hero/main-pic/Blur-168@1x.png 168w,
+          ./images/hero/main-pic/Blur-266@1x.png 266w,
+          ./images/hero/main-pic/Blur-336@2x.png 336w,
+          ./images/hero/main-pic/Blur-447@1x.png 447w,
+          ./images/hero/main-pic/Blur-532@2x.png 532w,
+          ./images/hero/main-pic/Blur-894@2x.png 894w
+        "
+        sizes="(min-width: 1200px) 447px, (min-width: 768px) 266px, (max-width: 767px) 168px"
+        src="./images/hero/main-pic/Blur-168@1x.png"
+        alt="blur"
+      />
       <div class="pic">
         <img
           class="img-icecream"
