--- a/src/sass/layouts/_hero-header.scss
+++ b/src/sass/layouts/_hero-header.scss
@@ -1,5 +1,3 @@
-// 73 64 49
-
 .header {
   background-color: var(--main-bg-cl);
 
@@ -109,6 +107,7 @@
   padding-top: 61px + 54px;
   padding-bottom: 239px;
   background-color: var(--main-bg-cl);
+  overflow: hidden;
 
   @media screen and (min-width: 768px) {
     padding-top: 40px + 68px;
@@ -355,6 +354,22 @@
   }
 }
 
+.blur {
+  position: absolute;
+
+  @media screen and (max-width: 767px) {
+    bottom: -280px;
+    left: 21%;
+  }
+  @media screen and (min-width: 768px) {
+    bottom: -120px;
+    left: 43%;
+  }
+  @media screen and (min-width: 1200px) {
+    bottom: -220px;
+    left: 42%;
+  }
+}
 .pic {
   position: absolute;
 
